src/test/ui/internal/internal-unstable.stderr
error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:33:25
   |
LL |     pass_through_allow!(internal_unstable::unstable());
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(function)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:35:27
   |
LL |     pass_through_noallow!(internal_unstable::unstable());
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(function)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:39:22
   |
LL |     println!("{:?}", internal_unstable::unstable());
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(function)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:41:10
   |
LL |     bar!(internal_unstable::unstable());
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(function)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:12:9
   |
LL |         internal_unstable::unstable();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bar!(internal_unstable::unstable());
   |     ------------------------------------ in this macro invocation
   |
   = help: add #![feature(function)] to the crate attributes to enable

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
